# solentware-grid

./: README  __init__.py  datagrid.py  pyproject.toml  setup.cfg  setup.py  version.py
apsw/: sqlite3bitdatasource.py  sqlite3datasource.py
apsw/test/: sqlite3datasource_test.py
core/: __init__.py  dataclient.py  dataregister.py
core/test/: __init__.py  dataclient_test.py  dataregister_test.py
db/: __init__.py  dbbitdatasource.py  dbdatasource.py
db/test/: __init__.py  dbdatasource_test.py
dpt/: __init__.py  dptdatasource.py
dpt/test/: __init__.py  dptdatasource_test.py
gridsup/: README  __init__.py  datagrid.py
gridsup/core/: dataclient.py
gridsup/gui/: datadelete.py  dataedit.py  datarow.py
gui/: __init__.py  datadelete.py  dataedit.py  datarow.py
gui/test/: __init__.py  datadelete_test.py  dataedit_test.py  datarow_test.py
samples/: testdataclient.py  testdatarow.py
solentware_grid/: datagrid.py
solentware_grid/core/: datasourceset.py
solentware_grid/core/tests/: __init__.py  test_dataclient.py  test_dataregister.py  test_datasourcecursor.py  test_datasourceset.py  test_nulldatasource.py
solentware_grid/dpt/tests/: __init__.py  test_dptdatasource.py  test_dptdatasourceset.py
solentware_grid/gui/: __init__.py  datadelete.py  dataedit.py  datarow.py  datashow.py
solentware_grid/gui/tests/: __init__.py  test_constants.py  (+6 more)
solentware_grid/tests/: __init__.py  test_datagrid.py
sqlite/: __init__.py  sqlite3bitdatasource.py  sqlite3datasource.py
sqlite/test/: __init__.py
test/: datagrid_test.py  testdataclient.py  testdatarow.py
